--- a/FFmpegWinUI/Page/Settings.xaml
+++ b/FFmpegWinUI/Page/Settings.xaml
@@ -87,31 +87,36 @@
 
             <!-- 进度条 -->
             <Grid Grid.Row="2" x:Name="ProgressGrid" Visibility="Collapsed">
-                <ProgressBar x:Name="DownloadProgressBar" 
-                             Height="4" 
-                             Minimum="0" 
-                             Maximum="100"
-                             Margin="0,8,0,0"/>
                 <Border Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
                         BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
                         BorderThickness="1"
                         CornerRadius="4"
                         Padding="12,8"
                         Margin="0,20,0,0">
-                    <StackPanel Orientation="Horizontal" Spacing="8">
-                        <ProgressRing IsActive="True" Width="16" Height="16"/>
-                        <TextBlock x:Name="InfoTextBlock"
+                    <StackPanel Orientation="Vertical" Spacing="5">
+                        <TextBlock x:Name="FileNameText" 
+                           Style="{StaticResource CaptionTextBlockStyle}" 
+                           VerticalAlignment="Center"/>
+                        <StackPanel Orientation="Horizontal" Spacing="8">
+                            <ProgressRing IsActive="True" Width="16" Height="16"/>
+                            <TextBlock x:Name="SpeedText" 
                                    Style="{StaticResource CaptionTextBlockStyle}"
                                    VerticalAlignment="Center"/>
-                        <TextBlock x:Name="SpeedText" 
+                            <TextBlock x:Name="InfoTextBlock"
                                    Style="{StaticResource CaptionTextBlockStyle}"
                                    VerticalAlignment="Center"/>
-                        <TextBlock x:Name="StatusText" 
+                            <TextBlock x:Name="StatusText" 
                                    Style="{StaticResource CaptionTextBlockStyle}"
                                    VerticalAlignment="Center"/>
-                        <InfoBadge x:Name="ErrorInfoBadge" 
+                            <InfoBadge x:Name="ErrorInfoBadge" 
                                    Foreground="{ThemeResource SystemFillColorCriticalBrush}" 
                                    Visibility="Collapsed"/>
+                        </StackPanel>
+                        <ProgressBar x:Name="DownloadProgressBar" 
+                             Height="4" 
+                             Minimum="0" 
+                             Maximum="100"
+                             Margin="0,8,0,0"/>
                     </StackPanel>
                 </Border>
             </Grid>
